# ds-unidad-2-actividad-2-listasdobleenlazadas-malibrann

./: README.md  docs.rar
src/: CMakeLists.txt  ListaDeCarga.cpp  ListaDeCarga.h  RotorDeMapeo.cpp  RotorDeMapeo.h  TramaBase.cpp  TramaBase.h  TramaLoad.cpp  TramaLoad.h  TramaMap.cpp  TramaMap.h  main.cpp
